<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/create_account"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:id="@+id/header"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/first_name"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:autofillHints="First Name"
            android:backgroundTint="#808080"
            android:hint="@string/first_name"

            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#808080"

            android:autofillHints="Last Name"
            android:hint="@string/last_name"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp"
            android:inputType="text"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#808080"

            android:autofillHints="Email"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#808080"

            android:autofillHints="Password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#808080"

            android:autofillHints="Repeat Password"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/bt_register"

            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_margin="0dp"
            android:background="@color/purple_700"
            android:elevation="2dp"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15sp"

            />
    </TableRow>

</TableLayout>